kustomize/base/generic/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghc-example-app
  labels:
    app.kubernetes.io/name: ghc-example-app
    app.kubernetes.io/part-of: gh0stcloud-onboarding
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ghc-example-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ghc-example-app
        app.kubernetes.io/part-of: gh0stcloud-onboarding
    spec:
      containers:
        - name: app
          image: ghcr.io/stefanprodan/podinfo:6.9.2
          ports:
            - name: http
              containerPort: 9898
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
