kustomize/base/generic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghc-example-app
  labels:
    app.kubernetes.io/name: ghc-example-app
    app.kubernetes.io/part-of: gh0stcloud-onboarding
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ghc-example-app
  ports:
    - name: http
      port: 80
      targetPort: http
