kustomize/base/generic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-application
  namespace: ghc-nsp-tenantHash-my-application
  annotations: {}
spec:
  ingressClassName: traefik
  rules:
    - host: ""
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-application
                port:
                  number: 80
  tls:
    - hosts:
        - ""
      secretName: my-application-tls
